Фікси по слайдеру

--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
               </div>
             </div>
         </div>
+        <button class="prev-slide"><</button>
+    <button class="next-slide">></button>
     </div>
     <main>
     <div class="content">
